python/testData/inspections/PyUnresolvedReferencesInspection/UnusedUnresolvedNameImported/a.py
from my_module import <error descr="Cannot find reference 'eggs' in 'my_module.py'">eggs</error>
